cmake_minimum_required(VERSION 2.8)

project( omniview )
find_package( OpenCV REQUIRED )
find_package( PkgConfig )
pkg_check_modules( EIGEN3 REQUIRED eigen3 )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${EIGEN3_INCLUDE_DIRS} )
add_executable( OmniView main.cpp ocam_functions.cpp )
target_link_libraries( OmniView ${OpenCV_LIBS} )
